# utils_xs

./: .gitignore  LICENSE  README.md  pyproject.toml
bat/: bat2py.bat  bat_helper.bat  bat_list.bat  bat_s.bat  bat_xs.bat  colorlist.bat  colors.bat  env_get.bat  env_save.bat  exif.bat  p.bat  py_convert_colors.bat  py_convert_env.bat  py_image_organizer.bat  py_img_cleanup_images.bat  py_img_cleanup_images_undo.bat  py_img_metadata_update.bat  py_img_metadata_wpt.bat  py_img_organize.bat  py_img_organizer.bat  py_img_rename_images.bat  py_imgs_cleanup_images.bat  py_imgs_cleanup_images_undo.bat  py_imgs_metadata_update.bat  py_imgs_move_from_dump.bat  py_imgs_rename_images.bat  template_bat.bat  template_bat_python.bat  va.bat  vas.bat  vc.bat  vd.bat  venv_create.bat  video_rename.bat  vscd.bat
bat/archive/: va_old.bat
docs/: utils_xs.md
requirements/: requirements-dev.txt  requirements.txt
src/config/: ansi_color_codes.py  color_logger.py  colors.py  constants.py  img_metadata_fields.py
src/legacy/: file_module.py
src/libs/: binary_sorter.py  custom_print.py  environment.py  exiftool.py  exiftool_fields.py  filter.py  geo.py  geo_meta_transformer.py  geo_transformer.py  helper.py  reverse_geo.py
src/model/: model_filter.py
src/playground/: test_dotenv.py  timer_ascii_art.py
src/scripts/: bat_helper.py  bat_list.py  browser_bookmarks.py  browser_history.py  convert_bat_colors_to_python.py  convert_bat_env_to_python.py  env_helper.py  image_organizer.py  markdown_parser.py  prompt.py  video_rename.py
templates/: _template.bat  _template_args.bat  _template_py.bat  _template_py_args path.bat  _template_py_args.bat  exiftool_gpx.fmt  exiftool_wpt.fmt  myenv_template.bat  script_templatey.py
