[project]
dynamic = ["dependencies", "optional-dependencies"]
name = "hf_utils"
requires-python = ">=3.11"
description = "command line utils"
version = "0.1.0"
authors = [
    { name = "John Doe", email = "xyz@abc.com" }
]

[tool.setuptools.dynamic]
dependencies = {file = ["./requirements/requirements.txt"]}
optional-dependencies = {dev = { file = ["./requirements/requirements-dev.txt"] }}

[tool.setuptools.packages.find]
where = ["src"]
# remove items 
# https://stackoverflow.com/questions/75387904/how-to-exclude-tests-folder-from-the-wheel-of-a-pyproject-toml-managed-lib

[build-system]
requires = ["setuptools >= 71.0.0" ]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
# https://docs.pytest.org/en/7.1.x/reference/reference.html#confval-testpaths
testpaths = "tests"

# https://stackoverflow.com/questions/4673373/logging-within-pytest-tests
log_cli = true
log_cli_level = "INFO"
# log_cli_format = "%(message)s"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

# file log options
# log_file = "pytest.log"
# log_file_level = "DEBUG"
# log_file_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
# log_file_date_format = "%Y-%m-%d %H:%M:%S"

[tool.coverage.run]
# https://coverage.readthedocs.io/en/latest/source.html#source
omit = [
    # omit anything in tests folder
    "tests/*"
    ]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
# https://docs.astral.sh/ruff/configuration/

# 1. Enable flake8-bugbear (`B`) rules, in addition to the defaults.
select = ["E", "F"]

# https://docs.astral.sh/ruff/rules/
# F401 https://docs.astral.sh/ruff/rules/unused-import/
# F811 https://docs.astral.sh/ruff/rules/redefined-while-unused/
# E501 https://docs.astral.sh/ruff/rules/line-too-long/
# E741 https://docs.astral.sh/ruff/rules/ambiguous-variable-name/
# E722 https://docs.astral.sh/ruff/rules/bare-except/
# E713 https://docs.astral.sh/ruff/rules/not-in-test/
# drop F401 to allow for removal odf not used import 
ignore = ["F811","E501","E741","E722","E713"]
# ignore = ["F401","F811","E501","E741","E722","E713"]




